[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[features]
mocks = ["dep:mockall"]

[dependencies]
opentelemetry = { version = "0.29.1"}
async-trait = { version = "0.1.88"}
thiserror = { version = "2.0.12" }

# mock
mockall = { version = "0.13.1", optional = true }

[dev-dependencies]
mockall = { version = "0.13.1" }
